# oiduna

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_REFACTORING_STATUS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_REPORT.md  DOCUMENTATION_CLEANUP_PLAN.md  Dockerfile  GLOSSARY.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MIGRATION_GUIDE.md  PHASE_1_2_SUMMARY.md  README.md  REFACTORING_REPORT.md  REVIEW_JP.md  TESTING_AND_QUALITY_SUMMARY.md  benchmark_plan.md  config.yaml  coverage.json  destinations.yaml  pyproject.toml
.github/workflows/: test.yml
docs/: ANALYSIS.md  API_REFERENCE.md  ARCHITECTURE.md  CODING_CONVENTIONS.md  DATA_MODEL_REFERENCE.md  DISTRIBUTION_GUIDE.md  DOCUMENTATION_RESTRUCTURING.md  EXTENSION_DEVELOPMENT_GUIDE.md  EXTENSION_SYSTEM_TEST_PLAN.md  ID_MIGRATION_GUIDE.md  IMPROVEMENTS.md  IPC_NAMING_MIGRATION.md  LIVE_CODING_EXAMPLES.md  MIDI_PARAMS_REFERENCE.md  MIGRATION_GUIDE.md  MIGRATION_GUIDE_SCHEDULE_CUED.md  MIGRATION_GUIDE_TERMINOLOGY_CLEANUP.md  OIDUNA_CONCEPTS.md  OPTIMISTIC_LOCKING.md  PERFORMANCE.md  README.md  RUST_ACCELERATION.md  SESSION_EVENT_SINK_MIGRATION.md  SPECIFICATION_v1.md  SSE_EVENTS.md  SUPERDIRT_MIGRATION_COMPLETE.md  TERMINOLOGY.md  USAGE_PATTERNS.md  api-examples.md  data-model.md  data_architecture_current_state.md  distribution-guide.md  mars-development-prompt.md  quick-start.md  request_to_playback_flow.md  scheduled_message_batch_flow.md  superdirt_startup_oiduna.scd
docs/architecture/: DIAGRAMS.md  EXTENSION_GUIDE.md  GIL_MITIGATION.md  QUICK_REFERENCE.md  README.md  external-interface.md  layer-1-api.md  layer-2-application.md  layer-3-core.md  layer-4-domain.md  layer-5-data.md
docs/archive/: ARCHITECTURE_REFACTORING_STATUS.md  ARCHITECTURE_UNIFICATION_COMPLETE.md  ARCHITECTURE_v2.0.0.md  EXTENSION_SYSTEM_TEST_CHECKLIST.md  ID_LENGTH_DISCUSSION.md  MIGRATION_GUIDE_SCHEDULED_MESSAGE_BATCH.md  PHASE_3_SUMMARY.md  README.md  SESSION_EVENT_SINK_MIGRATION.md
docs/knowledge/: README.md
samples/: README.md
samples/patterns/: basic_hihat.json  basic_kick.json  complex_pattern.json  simple_beat.json
samples/synthdefs/: acid.scd  kick.scd  pad.scd
scripts/: README.md  demo_new_api.sh  integration-test.py  memory_analysis.py  restore_superdirt.sh  setup_superdirt.sh  start-oiduna-api.sh  start_all.sh  start_superdirt.sh  test_assets.sh
src/: __init__.py
src/infrastructure/: __init__.py
src/interface/: __init__.py
src/oiduna/: __init__.py
tests/: conftest.py  test_api_integration.py
tests/e2e/: __init__.py  conftest.py
tests/fixtures/: sample_sessions.json
tests/integration/: conftest.py  test_api_integration.py  test_end_to_end_flow.py  test_http_api_integration.py  test_ipc_integration.py  test_loop_engine_integration.py  test_session_destination_validation.py  test_swing_timing.py  test_timeline_integration.py  test_transport_integration.py
tests/load/: __init__.py  conftest.py  test_concurrent_clients.py  test_ipc_throughput.py  test_transport_throughput.py
tests/oiduna_api/: conftest.py  test_main.py  test_routes_assets.py  test_routes_dashboard.py  test_routes_midi.py  test_routes_playback.py  test_routes_scene.py  test_routes_stream.py  test_routes_tracks.py  test_session_api.py
tests/oiduna_destination/: __init__.py  (+2 more)
(+256 files in other folders)
