[project]
name = "oiduna"
version = "1.0.0"
description = "Real-time SuperDirt/MIDI loop engine with HTTP API"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
authors = [
    {name = "Kengo Tobita", email = "kengo.tobita@example.com"}
]
keywords = ["music", "live-coding", "superdirt", "midi", "loop-engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "python-osc>=1.8.3",
    "mido>=1.3.3",
    "python-rtmidi>=1.5.8",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.22",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/KengoTobita/oiduna"
Documentation = "https://github.com/KengoTobita/oiduna/blob/main/README.md"
Repository = "https://github.com/KengoTobita/oiduna"
Issues = "https://github.com/KengoTobita/oiduna/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
strict = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "load: marks tests as load tests (run separately with RUN_LOAD_TESTS=1)",
    "boundary: marks boundary value tests",
    "e2e: marks tests as E2E tests (run with RUN_E2E_TESTS=1)",
    "stress: marks tests as stress tests (subset of e2e)",
    "resilience: marks tests as resilience tests (subset of e2e)",
    "long: marks tests as long-running E2E tests (run with RUN_LONG_E2E_TESTS=1)",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pyzmq>=26.0.0",
    "msgpack>=1.0.0",
]
